# InterVelo

./: CITATION.cff  README.md  pyproject.toml  setup.py
InterVelo/: __init__.py  _utils.py  basetrainer.py  confidence.py  data.py  logger.py  loss.py  model.py  module.py  parseconfig.py  simulation.py  simulation2.py  train.py
example/: simulation.py  test.py  test_Multi_omics.py
