[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InterVelo"
version = "0.2.0"
description = "A deep learning framework for joint inference of pseudotime and RNA velocity"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Yurou Wang", email = "rapunzel@sjtu.edu.cn" }
]

dependencies = [
    "numpy>=1.23,<3.0",
    "scipy>=1.9,<2.0",
    "pandas>=1.5,<3.0",

    "torch>=2.0",
    "torchdiffeq>=0.2.3",

    "scanpy>=1.9,<2.0",
    "scvelo>=0.3.1,<0.4",
    "anndata>=0.11,<0.12",

    "numba>=0.57",
    "scikit-learn>=1.2",
    "tqdm>=4.64",

    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12",
]

[project.scripts]
intervelo = "InterVelo.main:main"

